--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ GOOGLE_CLIENT_SECRET ="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"
 MONGO_URI="mongodb+srv://paragon7400:mUziZsK6UlfyuC55@twitter.hvwvlq1.mongodb.net/"
 
 # NEXT AUTH
-NEXTAUTH_JWT_SECRET = "NExT_AUTH_JWT_SECRET"
+NEXTAUTH_JWT_SECRET = "NEXT_AUTH_JWT_SECRET"
 NEXTAUTH_SECRET = "NEXT_AUTH_SECRET"
